--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,6 +9,8 @@
         android:id="@+id/fresh_config_menu"
         android:title="@string/fresh_config"
         app:showAsAction="never"/>
+    <item android:title="Contacts"
+        android:id="@+id/contact_menu" />
     <item
         android:id="@+id/invite_menu"
         android:title="@string/invite_menu_label"
