--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,15 @@
         android:layout_marginTop="69dp"
         android:id="@+id/bContact" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_marginBottom="51dp"
+        android:id="@+id/etChat"
+        android:layout_above="@+id/bGroupChat"
+        android:layout_centerHorizontal="true"
+        android:hint="Type Email to chat" />
+
 </RelativeLayout>
