basic of one-to-one completed more refines needed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         android:id="@+id/etChat"
         android:layout_above="@+id/bGroupChat"
         android:layout_centerHorizontal="true"
-        android:hint="Type Email to chat" />
+        android:hint="Type Email to chat"
+        android:textAlignment="center" />
 
 </RelativeLayout>
