--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/single_chat_menu"
+        android:title="@string/single_chat" />
+    <item android:title="Group Chat"
+        android:id="@+id/group_chat_menu" />
+    <item android:title="Contacts"
+    android:id="@+id/contact_menu" />
+    <item android:title="Upload"
+        android:id="@+id/upload_menu" />
     <item
         android:id="@+id/sign_out_menu"
         android:title="@string/sign_out"
         app:showAsAction="never"/>
-    <item android:title="Contacts"
-    android:id="@+id/contact_menu" />
-    <!--
-    <item
-        android:id="@+id/fresh_config_menu"
-        android:title="@string/fresh_config"
-        app:showAsAction="never"/>
-
-    <item
-        android:id="@+id/invite_menu"
-        android:title="@string/invite_menu_label"
-        app:showAsAction="never"/>
-        -->
-    <item
-        android:id="@+id/crash_menu"
-        android:title="@string/cause_crash"/>
 </menu>
