--- a/app/src/main/res/layout/activity_single_chat.xml
+++ b/app/src/main/res/layout/activity_single_chat.xml
@@ -25,6 +25,14 @@
         android:layout_alignParentStart="true"
         android:orientation="horizontal">
 
+        <Button
+            android:text="@string/more"
+            android:layout_width="39dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/moreButton"
+            android:textSize="10sp"
+            android:layout_weight="0.07" />
+
         <EditText
             android:id="@+id/messageEditText"
             android:layout_width="0dp"
