--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -25,6 +25,14 @@
         android:layout_alignParentStart="true"
         android:orientation="horizontal">
 
+        <Button
+            android:text="@string/more"
+            android:layout_width="39dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/moreButton"
+            android:textSize="8sp"
+            android:layout_weight="0.04" />
+
         <EditText
             android:id="@+id/messageEditText"
             android:layout_width="0dp"
@@ -34,11 +42,14 @@
 
         <Button
             android:id="@+id/sendButton"
-            android:layout_width="wrap_content"
+            android:layout_width="46dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:enabled="false"
-            android:text="SEND"/>
+            android:background="@android:drawable/ic_menu_send"
+            android:elevation="0dp"
+            android:layout_weight="0.03"
+            android:backgroundTint="@color/colorPrimary" />
 
     </LinearLayout>
 
