--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,6 @@
     tools:context="com.chatter.ui.MainActivity">
 
     <TextView
-        android:text="Welcome To Chatter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -28,15 +18,6 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:text="user 's email"
         android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:text="Chat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/bSingleChat"
-        android:layout_marginTop="56dp"
-        android:layout_alignTop="@+id/etChat"
         android:layout_centerHorizontal="true" />
 
     <EditText
@@ -52,26 +33,32 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <Button
+        android:text="random chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/etChat"
-        android:hint="Type Email to chat"
-        android:textAlignment="center"
-        android:layout_marginTop="68dp"
-        android:layout_below="@+id/tvUserEmail"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:id="@+id/bSingleChat"
+        android:layout_above="@+id/bAddContact"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="86dp" />
 
     <Button
         android:text="Add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/bAddContact"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/etContact"
-        android:layout_alignStart="@+id/bSingleChat" />
+        android:layout_marginBottom="154dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="Welcome To Chatter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:id="@+id/textView2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
